# leptos-axum-start

./: Cargo.toml  LICENSE  README.md  tailwind.config.js  tw.sh
app/: Cargo.toml
app/src/: lib.rs
assets/: main.css
css/: main.css
server/: Cargo.toml
server-api/: Cargo.toml
server/src/: fallback.rs  main.rs
server/tests/: integration.rs
src/: app.rs  fallback.rs  fileserv.rs  lib.rs  main.rs  server.rs
src/app/: mod.rs
tests/: integration.rs
