[package]
name = "app-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["serde"] }
leptos_meta = { workspace = true }
server-api = { path="../server-api", optional=true }
serde = { version = "1", features = ["derive"] }
cfg-if = "1"

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "dep:server-api"]
