[package]
name = "server-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-package = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["serde", "hydrate"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_dom = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }

axum = { version = "0.6" }
tokio = { version = "1.22.0", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.3.4", features = ["fs"] }
gloo-net = { version = "0.2", features = ["http"] }
log = "0.4"
cfg-if = "1.0"
futures = "0.3"
simple_logger = "4.0"
serde_json = "1.0"
reqwest = "0.11"
dotenvy = "0.15"
